src/custom/snapshots/hugr_llvm__custom__float__test__fle@llvm14.snap
---
source: src/custom/float.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i32, {}, {} } @_hl.main.1(double %0, double %1) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %2 = fcmp ole double %0, %1
  %3 = select i1 %2, { i32, {}, {} } { i32 1, {} poison, {} undef }, { i32, {}, {} } { i32 0, {} undef, {} poison }
  ret { i32, {}, {} } %3
}
